css/get-involved.css
*{
    margin: 0;
    padding: 0;
}

body {
    height: 100%;
    background-image: url('../assets/Background-1.jpg');
    background-size: cover;
    background-position: center;
}

/*Fixed height is set to give you an idea of what the page will look like.
It doesn't have to be this size. Adjust as needed*/
.get-involved {
    height: 400vh;
}
.calendar-container {
  display:block;
  margin:auto;
  padding: 40px;
  box-shadow: 5px,5px 5px #000000;
}
.accordion {
  background-color: transparent;
  color: #000000;
  display: block;
  margin: auto; 
  cursor: pointer;
  padding: 15px;
  width: 80%;
  border-bottom-style: solid;
  border-top-style:none;
  border-left-style:none;
  border-right-style:none;
  border-width: 2px;
  border-color:#398FB9;
  text-align: center;
  text-transform: uppercase;
  outline: none;
  font-size: 15px;
  transition: 0.4s;
}

.active-acc, .accordion:hover {
  background-color: #47b0e450;
}

.panel {
  padding: 2px 18px;
  background-color: white;
  max-height: 0;
  width: 80%;
  overflow: hidden;
  transition: max-height 0.3s ease-out;
  display:block;
  margin: auto;
  text-align: center;
}
.accordion:after {
  content: '\002B'; 
  color: #777;
  float: right;
  margin-left: 5px;
}
.active-acc:after {
  content: "\2796"; 
}
.get-involved-header {
text-transform: uppercase;
text-align: center;
color: #398FB9;
padding: 10px;
border-bottom: 3px solid #398FB9;
margin: auto;
width: 50%;
}

